--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </button>
       <div id="nav" class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav align-items-lg-center gap-lg-2">
-          <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">HI HI</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
@@ -398,3 +398,4 @@
   </script>
 </body>
 </html>
+
