--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"/>
 </head>
 <body>
-  <header>
+  <header class="fade-in">
     <div class="container">
       <h1>Neha Dabeeru</h1>
       <p class="tagline">Actively Seeking SDE Roles | Full-Stack Developer | AWS Certified | San Jose State University</p>
     </div>
   </header>
 
-  <section class="about container">
+  <section class="about container fade-in">
     <h2>About Me</h2>
     <p>
       I am a passionate software engineer with expertise in full-stack development, cloud computing, and data-driven applications. 
@@ -25,10 +25,10 @@
     </p>
   </section>
 
-  <section class="experience container">
+  <section class="experience container fade-in">
     <h2>Experience</h2>
 
-    <div class="job">
+    <div class="job card">
       <h3>Application Developer – CS Optima Inc</h3>
       <span class="duration">Jan 2025 – Present | Remote, Austin TX</span>
       <ul>
@@ -40,7 +40,7 @@
       </ul>
     </div>
 
-    <div class="job">
+    <div class="job card">
       <h3>Software Engineer II – Bank of America</h3>
       <span class="duration">Jun 2024 – Aug 2024 | Charlotte, NC</span>
       <ul>
@@ -50,9 +50,9 @@
     </div>
   </section>
 
-  <section class="certifications container">
+  <section class="certifications container fade-in">
     <h2>Certifications</h2>
-    <div class="cert-card">
+    <div class="cert-card card">
       <img src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Data-Engineer-Associate_badge_300x300.4d7d927b3b4c46fdf5eec6bcd63a72c551c154d5.png" alt="AWS Certified Data Engineer" />
       <div>
         <h4>AWS Certified Data Engineer – Associate</h4>
@@ -61,19 +61,19 @@
     </div>
   </section>
 
-  <section class="projects container">
+  <section class="projects container fade-in">
     <h2>Key Projects</h2>
-    <div class="project">
+    <div class="project card">
       <h4>MedPredict – Hospital Readmission Prediction</h4>
       <p>92% accurate LLM-driven healthcare analytics system using AWS S3, FastAPI, Docker, and HIPAA-compliant security.</p>
     </div>
-    <div class="project">
+    <div class="project card">
       <h4>ChurnXpert – Telecom Retention Analytics</h4>
       <p>Machine learning pipeline for churn prediction using clustering, anomaly detection, and predictive modeling.</p>
     </div>
   </section>
 
-  <footer>
+  <footer class="fade-in">
     <p>© 2025 Neha Dabeeru | <a href="mailto:neha@example.com">Contact</a> | <a href="https://www.linkedin.com/in/nehadabeeru/">LinkedIn</a> | <a href="https://github.com/nehadabeeru">GitHub</a></p>
   </footer>
 </body>
